# agentic-a006a83d

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  test.db
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/core/: security.py
backend/app/models/: __init__.py  appointment.py  inventory.py  invoice.py  patient.py  reminder.py  user.py
backend/app/routers/: __init__.py  appointments.py  auth.py  billing.py  inventory.py  patients.py  reminders.py  reports.py
backend/app/schemas/: __init__.py  appointment.py  auth.py  inventory.py  invoice.py  patient.py  reminder.py
backend/app/services/: __init__.py  calendar.py  notifications.py  payments.py
backend/esthetimanage_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_appointments.py
docs/: Requirements.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/views/: admin-panel-view.tsx  dashboard-view.tsx  patient-portal-view.tsx
frontend/src/lib/: chart.ts  i18n.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
